--- a/css/style.css
+++ b/css/style.css
@@ -771,6 +771,7 @@ input[type='checkbox']{
   background-color: #C8242F;
   border-radius: 23px;
   margin-right: 20.5px;
+  border: none;
 }
 .btn-box .secondary{
   width: 145px;
@@ -782,4 +783,36 @@ input[type='checkbox']{
   border: 1px solid #C8242F;
   border-radius: 22px;
   margin-right: 20.5px;
+}
+
+.tabs{
+  list-style-type: none;
+  display: flex;
+  border-bottom: 1px solid #ADADAD;
+  padding-left: 0rem;
+}
+
+.tabs .tab-item{
+  width: 69px;
+  text-align: center;
+}
+.tabs .tab-item .tab-link{
+  text-decoration: none;
+  color: #ADADAD;
+}
+.tabs .tab-item .tab-link:hover{
+  color: #C8242F;
+}
+.tabs .active{
+  border-bottom: 2px solid #C8242F;
+}
+.tabs .active .tab-link{
+  color: #C8242F;
+  font-weight: 600;
+}
+
+.col-box p{
+  color: #3E3E3E;
+  font-size: 15px;
+  width: 1119px;
 }
