--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 * {
   font-family: Roboto;
 }
+
 .main-container {
   background: #fafafa 0% 0% no-repeat padding-box;
   height: 100vh;
   display: flex;
 }
+
 .flex-container {
   /* background-color: #FAFAFA; */
   display: flex;
@@ -24,6 +26,7 @@
   border: 20px solid #ffffff;
   border-radius: 50%;
 }
+
 .content {
   display: flex;
   flex-direction: column;
@@ -65,6 +68,7 @@ form.login-form {
   margin-top: 24px;
   width: 429px;
 }
+
 form.login-form input[type="text"] {
   height: 49px;
   width: 429px;
@@ -74,6 +78,7 @@ form.login-form input[type="text"] {
   font-size: 15px;
   border-radius: 5px;
 }
+
 #password {
   margin-top: 27px;
 }
@@ -93,6 +98,7 @@ form.login-form .submit {
   margin-top: 30px;
   display: flex;
 }
+
 form.login-form .submit .forgotpass {
   font-family: Roboto;
   font-size: 15px;
@@ -107,6 +113,7 @@ form.login-form .submit .forgotpass {
   font-family: Roboto;
   margin-top: 24px;
 }
+
 .new-member {
   color: #adadad;
 }
@@ -122,11 +129,13 @@ form.login-form .submit .forgotpass {
   height: 100vh;
   display: flex;
 }
+
 .dashboard-container {
-  width: 1560px; 
+  width: 1560px;
   height: 1360px;
   margin: auto;
 }
+
 Header {
   display: flex;
   align-items: center;
@@ -139,6 +148,7 @@ Header .logo {
   width: 142px;
   height: 30px;
 }
+
 Header .flex-left {
   width: 242px;
 }
@@ -156,6 +166,7 @@ Header .search {
   height: 16px;
   width: 16px;
 }
+
 Header .search-txt {
   color: black;
   height: 20px;
@@ -163,6 +174,7 @@ Header .search-txt {
   font-size: 16px;
   border: none;
 }
+
 Header .search-txt::placeholder {
   color: black;
 }
@@ -207,6 +219,7 @@ Header .flex-right .right-panel {
   padding-left: 18px;
   border-radius: 5px;
 }
+
 .main .side-bar .side-bar-item .sidebar-item-icon {
   height: 16px;
   width: 16px;
@@ -244,6 +257,7 @@ Header .flex-right .right-panel {
   margin-top: 30px;
   margin-left: 20px;
 }
+
 .main-dashboard .product-list .product-item {
   display: flex;
   align-items: center;
@@ -254,10 +268,12 @@ Header .flex-right .right-panel {
   margin-left: 30px;
   justify-content: center;
 }
+
 .main-dashboard .product-list .product-item .icon {
   height: 33px;
   width: 33px;
 }
+
 .main-dashboard .product-list .product-item .details {
   display: flex;
   color: #3e3e3e;
@@ -276,6 +292,7 @@ Header .flex-right .right-panel {
   margin-left: 50px;
   margin-top: 30px;
 }
+
 .main-dashboard .sales-section .sale {
   display: flex;
   border-radius: 5px;
@@ -285,28 +302,34 @@ Header .flex-right .right-panel {
   padding-left: 30px;
   flex-direction: column;
 }
+
 .main-dashboard .sales-section .sale .sale-nav {
   display: flex;
   margin-top: 24px;
   justify-content: space-between;
 }
+
 .main-dashboard .sales-section .sale .sale-nav .sale-text {
   font-size: 22px;
   font-weight: 600;
   color: #3e3e3e;
 }
+
 .main-dashboard .sales-section .sale .sale-nav .navbar {
   list-style-type: none;
   display: flex;
 }
+
 .main-dashboard .sales-section .sale .sale-nav .navbar .navbar-item {
   margin-right: 30px;
   flex-wrap: wrap;
 }
+
 .main-dashboard .sales-section .sale .sale-nav .navbar .navbar-item .navbar-link {
   font-size: 12px;
   text-decoration: none;
 }
+
 .activate {
   color: #c8242f;
   padding-bottom: 5px;
@@ -327,44 +350,50 @@ Header .flex-right .right-panel {
   padding-top: 22px;
   margin-left: 30px;
 }
+
 .main-dashboard .sales-section .sale-by-country .sale-by-country-text {
   font-size: 22px;
   font-weight: 600;
   color: #3e3e3e;
   padding-left: 29px;
 }
-.main-dashboard .sales-section .sale-by-country .chart
-{
+
+.main-dashboard .sales-section .sale-by-country .chart {
   align-self: center;
   margin-top: 20px;
 }
 
-#ul-chart-list{
+#ul-chart-list {
   column-count: 2;
   min-width: 480px;
 }
-li span{
+
+li span {
   font-size: 15px;
   color: #3E3E3E;
 }
-#USA::marker{
+
+#USA::marker {
   color: #c8242f;
-  font-size: 18pt; 
-}
-#Russia::marker{
-  color: #F16C20;
-  font-size: 18pt; 
-}
-#Canada::marker{
-  color: #A2B86C;
-  font-size: 18pt; 
-}
-#India::marker{
-  color: #EBC844;
-  font-size: 18pt; 
+  font-size: 18pt;
 }
 
-.main-dashboard .invoices{
+#Russia::marker {
+  color: #F16C20;
+  font-size: 18pt;
+}
+
+#Canada::marker {
+  color: #A2B86C;
+  font-size: 18pt;
+}
+
+#India::marker {
+  color: #EBC844;
+  font-size: 18pt;
+}
+
+.main-dashboard .invoices {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -375,41 +404,42 @@ li span{
   padding-left: 29px;
   padding-right: 29px;
   width: 1217px;
-  height:558px
+  height: 558px
 }
-.main-dashboard .invoices .invoices-header{
+
+.main-dashboard .invoices .invoices-header {
   display: flex;
   justify-content: space-between;
 }
 
-.main-dashboard .invoices .invoices-header .invoices-text{
+.main-dashboard .invoices .invoices-header .invoices-text {
   font-size: 22px;
   font-weight: 600;
   color: #3e3e3e;
 }
 
-.main-dashboard .invoices .invoices-header .view-all{
-  color:#C8242F;
+.main-dashboard .invoices .invoices-header .view-all {
+  color: #C8242F;
   font-size: 12px;
   font-weight: bold;
   text-decoration: none;
 }
 
-.main-dashboard .invoices .custom-table{
+.main-dashboard .invoices .custom-table {
   margin-top: 35px;
 }
 
-.main-dashboard .invoices .custom-table .table-header{
+.main-dashboard .invoices .custom-table .table-header {
   color: #ADADAD;
   font-size: 15px;
 }
 
-.main-dashboard .invoices .custom-table .data{
+.main-dashboard .invoices .custom-table .data {
   font-size: 15px;
   color: #3E3E3E;
 }
 
-.main-dashboard .invoices .custom-table .data .paid{
+.main-dashboard .invoices .custom-table .data .paid {
   height: 26px;
   width: 50px;
   background-color: #EBFFEF;
@@ -418,7 +448,7 @@ li span{
   border-radius: 5px;
 }
 
-.main-dashboard .invoices .custom-table .data .failed{
+.main-dashboard .invoices .custom-table .data .failed {
   height: 26px;
   width: 60px;
   background-color: #FFF5F5;
@@ -427,7 +457,7 @@ li span{
   border-radius: 5px;
 }
 
-.main-dashboard .invoices .custom-table .data .pending{
+.main-dashboard .invoices .custom-table .data .pending {
   height: 26px;
   width: 75px;
   background-color: #F8F8F8;
@@ -436,21 +466,22 @@ li span{
   border-radius: 5px;
 }
 
-#last-row{
+#last-row {
   border-color: #ffffff;
 }
 
 /* Inner-Page CSS */
 .innerpage-container {
-  width: 1560px; 
+  width: 1560px;
   height: 1970px;
   margin: auto;
 }
-.item-2{
+
+.item-2 {
   background-color: #fff3f4;
 }
 
-.main-dashboard .main-form{
+.main-dashboard .main-form {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -464,47 +495,291 @@ li span{
   padding-top: 23px;
 }
 
-.main-form .col-box{
+.main-form .col-box {
   display: flex;
   flex-direction: column;
   margin-bottom: 44px;
 }
 
-.main-form .col-box .head-text{
-  color:#3E3E3E;
+.main-form .col-box .head-text {
+  color: #3E3E3E;
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 15px;
 }
 
-.main-form .col-box .txt-control{
-  border-color: #ADADAD;
+.main-form .col-box .control {
+  position: relative;
+}
+
+.main-form .col-box .control .txt-control {
+  border: 1px solid #ADADAD;
   border-radius: 4.5px;
   height: 49px;
+  width: 100%;
   color: #3E3E3E;
-}
-.main-form .col-box .txt-control::placeholder{
-  color: #ADADAD;
+  padding-left: 15px;
+  transition: transform 1s;
 }
 
-.main-form .col-box .multiline-control{
-  border-color: #ADADAD;
+.main-form .col-box .control .txt-control~label {
+  color: #ADADAD;
+  position: absolute;
+  left: 15px;
+  top: 13px;
+}
+
+input:focus~label,
+input:valid~label {
+  background-color: #ffffff;
+  font-size: 12px;
+  padding-left: 5px;
+  padding-right: 5px;
+  transform: translateX(-7px) translateY(-24px);
+}
+
+input:focus {
+  outline: 1px solid #C8242F;
+}
+
+.main-form .col-box .control .dropdown-control {
+  border: 1px solid #ADADAD;
+  background-color: #FFFFFF;
   border-radius: 4.5px;
-  color: #3E3E3E;
+  height: 49px;
+  width: 100%;
+  color: #ADADAD;
+  padding-left: 15px;
+}
+
+.main-form .col-box .multiline-control {
+  border: 1px solid #ADADAD;
+  border-radius: 4.5px;
   margin-top: 21px;
-}
-.main-form .col-box .txt-control::placeholder{
-  color: #ADADAD;
-}
-
-.main-form .col-box .multiline-control::placeholder{
-  color: #ADADAD;
+  width: 100%;
+  color: #3E3E3E;
+  padding-left: 15px;
+  transition: transform 1s;
 }
 
-.main-form .col-box .disable-control{
+.main-form .col-box .control .multiline-control~label {
+  color: #ADADAD;
+  position: absolute;
+  left: 15px;
+  top: 34px;
+}
+
+textarea:focus~label,
+textarea:valid~label {
+  background-color: #ffffff;
+  font-size: 12px;
+  padding-left: 5px;
+  padding-right: 5px;
+  transform: translateX(-7px) translateY(-24px);
+}
+
+textarea:focus {
+  outline: 1px solid #C8242F;
+}
+
+.main-form .col-box .disable-control {
   border-color: #ADADAD;
+  width: 100%;
   border-radius: 4.5px;
   height: 49px;
   color: #ADADAD;
   border-style: dashed;
+  background-color: #FFFFFF;
+  padding-left: 15px;
+}
+
+.main-form .col-box .control .disable-control~label {
+  color: #ADADAD;
+  position: absolute;
+  background-color: #ffffff;
+  font-size: 12px;
+  padding-left: 5px;
+  padding-right: 5px;
+  left: 15px;
+  top: 13px;
+  transform: translateX(-7px) translateY(-20px);
+}
+
+/* validation */
+.main-form .col-box .control .validate-control {
+  border: 1px solid #FF3C3C;
+  border-radius: 4.5px;
+  height: 47px;
+  width: 100%;
+  color: #3E3E3E;
+  padding-left: 15px;
+}
+
+.main-form .col-box .control .validate-control~label {
+  color: #FF3C3C;
+  position: absolute;
+  background-color: #ffffff;
+  font-size: 12px;
+  padding-left: 5px;
+  padding-right: 5px;
+  left: 15px;
+  top: 13px;
+  transform: translateX(-7px) translateY(-20px);
+}
+
+.main-form .col-box .control .validate-control~span {
+  color: #FF3B3B;
+  font-size: 12px;
+  padding-left: 15px;
+}
+
+/* info not validate */
+.main-form .col-box .control .info-control {
+  border: 1px solid #ADADAD;
+  border-radius: 4.5px;
+  height: 47px;
+  width: 100%;
+  color: #3E3E3E;
+  padding-left: 15px;
+}
+
+.main-form .col-box .control .info-control~label {
+  color: #ADADAD;
+  position: absolute;
+  left: 15px;
+  top: 13px;
+}
+
+.main-form .col-box .control .info-control~span {
+  color: #ADADAD;
+  font-size: 12px;
+  padding-left: 15px;
+}
+
+/* other elements */
+.main-form .col-box .inner-head-text {
+  color: #3E3E3E;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+input[type="file"] {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+
+}
+
+.col-box .control .btn-upload {
+  border-radius: 18px;
+  border: 1px solid #C8242F;
+  background-color: #FFFFFF;
+  height: 36px;
+  width: 124px;
+  color: #C8242F;
+}
+
+.col-box .control .btn-upload~span {
+  font-size: 12px;
+  color: #ADADAD;
+  margin-left: 20px;
+}
+
+.col-box .radiobutton {
+  display: flex;
+}
+
+input[type='radio'] {
+  width: 15px;
+  height: 15px;
+  accent-color: #c8242f;
+  outline: none;
+}
+
+.col-box .radiobutton .opt {
+  margin-right: 38px;
+}
+
+.col-box .radiobutton .opt .opt-name {
+  padding-left: 10px;
+  font-size: 15px;
+  color: #3E3E3E;
+}
+
+.col-box .check-box{
+  display: flex;
+}
+
+.col-box .check-box .check{
+  margin-right: 36px;
+}
+
+.col-box .check-box .check .check-name{
+  padding-left: 10px;
+  font-size: 15px;
+}
+input[type='checkbox']{
+  height: 16px;
+  width: 16px;
+  accent-color: #c8242f;
+}
+
+.snackbar{
+  height: 44px;
+  border-radius: 4.5px;
+  line-height: 44px;
+}
+
+
+.snackbar img{
+  height: 27px;
+  width: 27px;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.error{
+  border: 1px solid #FF3535;
+  color: #FF3535;
+}
+
+.info{
+  border: 1px solid #00B9E1;
+  color: #00B9E1;
+}
+
+.warning{
+  border: 1px solid #FFA800;
+  color:#FFA800;
+}
+.success{
+  border: 1px solid #00AF27;
+  color: #00AF27;
+}
+
+.btn-box{
+  display: flex;
+}
+.btn-box .primary{
+  width: 124px;
+  height: 45px;
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  background-color: #C8242F;
+  border-radius: 23px;
+  margin-right: 20.5px;
+}
+.btn-box .secondary{
+  width: 145px;
+  height: 44px;
+  font-size: 18px;
+  line-height: 24px;
+  color: #C8242F;
+  background-color: #ffffff;
+  border: 1px solid #C8242F;
+  border-radius: 22px;
+  margin-right: 20.5px;
 }
