--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,16 @@
 .main-container {
   background: #fafafa 0% 0% no-repeat padding-box;
   height: 100vh;
+  min-height: 720px;
   display: flex;
+  min-width: 1560px;
 }
 
 .flex-container {
   /* background-color: #FAFAFA; */
   display: flex;
   justify-content: center;
-  height: 720px;
+  height: 100%;
   width: 100%;
   margin: auto;
 }
@@ -125,7 +127,7 @@ form.login-form .submit .forgotpass {
 /* For DashBoard */
 
 .dashboard-main-container {
-  background: #FFFFFF 0% 0% no-repeat padding-box;
+  background: #ffffff 0% 0% no-repeat padding-box;
   height: 100vh;
   display: flex;
 }
@@ -325,7 +327,13 @@ Header .flex-right .right-panel {
   flex-wrap: wrap;
 }
 
-.main-dashboard .sales-section .sale .sale-nav .navbar .navbar-item .navbar-link {
+.main-dashboard
+  .sales-section
+  .sale
+  .sale-nav
+  .navbar
+  .navbar-item
+  .navbar-link {
   font-size: 12px;
   text-decoration: none;
 }
@@ -370,7 +378,7 @@ Header .flex-right .right-panel {
 
 li span {
   font-size: 15px;
-  color: #3E3E3E;
+  color: #3e3e3e;
 }
 
 #USA::marker {
@@ -379,17 +387,17 @@ li span {
 }
 
 #Russia::marker {
-  color: #F16C20;
+  color: #f16c20;
   font-size: 18pt;
 }
 
 #Canada::marker {
-  color: #A2B86C;
+  color: #a2b86c;
   font-size: 18pt;
 }
 
 #India::marker {
-  color: #EBC844;
+  color: #ebc844;
   font-size: 18pt;
 }
 
@@ -400,11 +408,11 @@ li span {
   margin-left: 50px;
   margin-top: 30px;
   background-color: #ffffff;
-  padding-top: 23PX;
+  padding-top: 23px;
   padding-left: 29px;
   padding-right: 29px;
   width: 1217px;
-  height: 558px
+  height: 558px;
 }
 
 .main-dashboard .invoices .invoices-header {
@@ -419,7 +427,7 @@ li span {
 }
 
 .main-dashboard .invoices .invoices-header .view-all {
-  color: #C8242F;
+  color: #c8242f;
   font-size: 12px;
   font-weight: bold;
   text-decoration: none;
@@ -430,39 +438,39 @@ li span {
 }
 
 .main-dashboard .invoices .custom-table .table-header {
-  color: #ADADAD;
+  color: #adadad;
   font-size: 15px;
 }
 
 .main-dashboard .invoices .custom-table .data {
   font-size: 15px;
-  color: #3E3E3E;
+  color: #3e3e3e;
 }
 
 .main-dashboard .invoices .custom-table .data .paid {
   height: 26px;
   width: 50px;
-  background-color: #EBFFEF;
+  background-color: #ebffef;
   text-align: center;
-  color: #3CDD5F;
+  color: #3cdd5f;
   border-radius: 5px;
 }
 
 .main-dashboard .invoices .custom-table .data .failed {
   height: 26px;
   width: 60px;
-  background-color: #FFF5F5;
+  background-color: #fff5f5;
   text-align: center;
-  color: #FF4545;
+  color: #ff4545;
   border-radius: 5px;
 }
 
 .main-dashboard .invoices .custom-table .data .pending {
   height: 26px;
   width: 75px;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   text-align: center;
-  color: #BABABA;
+  color: #bababa;
   border-radius: 5px;
 }
 
@@ -487,7 +495,7 @@ li span {
   border-radius: 5px;
   margin-left: 50px;
   margin-top: 23px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   width: 1218px;
   height: 1749px;
   padding-left: 29px;
@@ -502,7 +510,7 @@ li span {
 }
 
 .main-form .col-box .head-text {
-  color: #3E3E3E;
+  color: #3e3e3e;
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 15px;
@@ -513,24 +521,24 @@ li span {
 }
 
 .main-form .col-box .control .txt-control {
-  border: 1px solid #ADADAD;
+  border: 1px solid #adadad;
   border-radius: 4.5px;
   height: 49px;
   width: 100%;
-  color: #3E3E3E;
+  color: #3e3e3e;
   padding-left: 15px;
   transition: transform 1s;
 }
 
-.main-form .col-box .control .txt-control~label {
-  color: #ADADAD;
+.main-form .col-box .control .txt-control ~ label {
+  color: #adadad;
   position: absolute;
   left: 15px;
   top: 13px;
 }
 
-input:focus~label,
-input:valid~label {
+input:focus ~ label,
+input:valid ~ label {
   background-color: #ffffff;
   font-size: 12px;
   padding-left: 5px;
@@ -539,38 +547,38 @@ input:valid~label {
 }
 
 input:focus {
-  outline: 1px solid #C8242F;
+  outline: 1px solid #c8242f;
 }
 
 .main-form .col-box .control .dropdown-control {
-  border: 1px solid #ADADAD;
-  background-color: #FFFFFF;
+  border: 1px solid #adadad;
+  background-color: #ffffff;
   border-radius: 4.5px;
   height: 49px;
   width: 100%;
-  color: #ADADAD;
+  color: #adadad;
   padding-left: 15px;
 }
 
 .main-form .col-box .multiline-control {
-  border: 1px solid #ADADAD;
+  border: 1px solid #adadad;
   border-radius: 4.5px;
   margin-top: 21px;
   width: 100%;
-  color: #3E3E3E;
+  color: #3e3e3e;
   padding-left: 15px;
   transition: transform 1s;
 }
 
-.main-form .col-box .control .multiline-control~label {
-  color: #ADADAD;
+.main-form .col-box .control .multiline-control ~ label {
+  color: #adadad;
   position: absolute;
   left: 15px;
   top: 34px;
 }
 
-textarea:focus~label,
-textarea:valid~label {
+textarea:focus ~ label,
+textarea:valid ~ label {
   background-color: #ffffff;
   font-size: 12px;
   padding-left: 5px;
@@ -579,22 +587,22 @@ textarea:valid~label {
 }
 
 textarea:focus {
-  outline: 1px solid #C8242F;
+  outline: 1px solid #c8242f;
 }
 
 .main-form .col-box .disable-control {
-  border-color: #ADADAD;
+  border-color: #adadad;
   width: 100%;
   border-radius: 4.5px;
   height: 49px;
-  color: #ADADAD;
+  color: #adadad;
   border-style: dashed;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding-left: 15px;
 }
 
-.main-form .col-box .control .disable-control~label {
-  color: #ADADAD;
+.main-form .col-box .control .disable-control ~ label {
+  color: #adadad;
   position: absolute;
   background-color: #ffffff;
   font-size: 12px;
@@ -607,16 +615,16 @@ textarea:focus {
 
 /* validation */
 .main-form .col-box .control .validate-control {
-  border: 1px solid #FF3C3C;
+  border: 1px solid #ff3c3c;
   border-radius: 4.5px;
   height: 47px;
   width: 100%;
-  color: #3E3E3E;
+  color: #3e3e3e;
   padding-left: 15px;
 }
 
-.main-form .col-box .control .validate-control~label {
-  color: #FF3C3C;
+.main-form .col-box .control .validate-control ~ label {
+  color: #ff3c3c;
   position: absolute;
   background-color: #ffffff;
   font-size: 12px;
@@ -627,38 +635,38 @@ textarea:focus {
   transform: translateX(-7px) translateY(-20px);
 }
 
-.main-form .col-box .control .validate-control~span {
-  color: #FF3B3B;
+.main-form .col-box .control .validate-control ~ span {
+  color: #ff3b3b;
   font-size: 12px;
   padding-left: 15px;
 }
 
 /* info not validate */
 .main-form .col-box .control .info-control {
-  border: 1px solid #ADADAD;
+  border: 1px solid #adadad;
   border-radius: 4.5px;
   height: 47px;
   width: 100%;
-  color: #3E3E3E;
+  color: #3e3e3e;
   padding-left: 15px;
 }
 
-.main-form .col-box .control .info-control~label {
-  color: #ADADAD;
+.main-form .col-box .control .info-control ~ label {
+  color: #adadad;
   position: absolute;
   left: 15px;
   top: 13px;
 }
 
-.main-form .col-box .control .info-control~span {
-  color: #ADADAD;
+.main-form .col-box .control .info-control ~ span {
+  color: #adadad;
   font-size: 12px;
   padding-left: 15px;
 }
 
 /* other elements */
 .main-form .col-box .inner-head-text {
-  color: #3E3E3E;
+  color: #3e3e3e;
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 15px;
@@ -669,21 +677,20 @@ input[type="file"] {
   position: absolute;
   left: 0;
   top: 0;
-
 }
 
 .col-box .control .btn-upload {
   border-radius: 18px;
-  border: 1px solid #C8242F;
-  background-color: #FFFFFF;
+  border: 1px solid #c8242f;
+  background-color: #ffffff;
   height: 36px;
   width: 124px;
-  color: #C8242F;
+  color: #c8242f;
 }
 
-.col-box .control .btn-upload~span {
+.col-box .control .btn-upload ~ span {
   font-size: 12px;
-  color: #ADADAD;
+  color: #adadad;
   margin-left: 20px;
 }
 
@@ -691,7 +698,7 @@ input[type="file"] {
   display: flex;
 }
 
-input[type='radio'] {
+input[type="radio"] {
   width: 15px;
   height: 15px;
   accent-color: #c8242f;
@@ -705,114 +712,192 @@ input[type='radio'] {
 .col-box .radiobutton .opt .opt-name {
   padding-left: 10px;
   font-size: 15px;
-  color: #3E3E3E;
+  color: #3e3e3e;
 }
 
-.col-box .check-box{
+.col-box .check-box {
   display: flex;
 }
 
-.col-box .check-box .check{
+.col-box .check-box .check {
   margin-right: 36px;
 }
 
-.col-box .check-box .check .check-name{
+.col-box .check-box .check .check-name {
   padding-left: 10px;
   font-size: 15px;
 }
-input[type='checkbox']{
+input[type="checkbox"] {
   height: 16px;
   width: 16px;
   accent-color: #c8242f;
 }
 
-.snackbar{
+.snackbar {
   height: 44px;
   border-radius: 4.5px;
   line-height: 44px;
 }
 
-
-.snackbar img{
+.snackbar img {
   height: 27px;
   width: 27px;
   margin-left: 10px;
   margin-right: 5px;
 }
 
-.error{
-  border: 1px solid #FF3535;
-  color: #FF3535;
+.error {
+  border: 1px solid #ff3535;
+  color: #ff3535;
 }
 
-.info{
-  border: 1px solid #00B9E1;
-  color: #00B9E1;
+.info {
+  border: 1px solid #00b9e1;
+  color: #00b9e1;
 }
 
-.warning{
-  border: 1px solid #FFA800;
-  color:#FFA800;
+.warning {
+  border: 1px solid #ffa800;
+  color: #ffa800;
 }
-.success{
-  border: 1px solid #00AF27;
-  color: #00AF27;
+.success {
+  border: 1px solid #00af27;
+  color: #00af27;
 }
 
-.btn-box{
+.btn-box {
   display: flex;
 }
-.btn-box .primary{
+.btn-box .primary {
   width: 124px;
   height: 45px;
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
-  background-color: #C8242F;
+  background-color: #c8242f;
   border-radius: 23px;
   margin-right: 20.5px;
   border: none;
 }
-.btn-box .secondary{
+.btn-box .secondary {
   width: 145px;
   height: 44px;
   font-size: 18px;
   line-height: 24px;
-  color: #C8242F;
+  color: #c8242f;
   background-color: #ffffff;
-  border: 1px solid #C8242F;
+  border: 1px solid #c8242f;
   border-radius: 22px;
   margin-right: 20.5px;
 }
 
-.tabs{
+.tabs {
   list-style-type: none;
   display: flex;
-  border-bottom: 1px solid #ADADAD;
+  border-bottom: 1px solid #adadad;
   padding-left: 0rem;
 }
 
-.tabs .tab-item{
+.tabs .tab-item {
   width: 69px;
   text-align: center;
 }
-.tabs .tab-item .tab-link{
+.tabs .tab-item .tab-link {
   text-decoration: none;
-  color: #ADADAD;
+  color: #adadad;
 }
-.tabs .tab-item .tab-link:hover{
-  color: #C8242F;
+.tabs .tab-item .tab-link:hover {
+  color: #c8242f;
 }
-.tabs .active{
-  border-bottom: 2px solid #C8242F;
+.tabs .active {
+  border-bottom: 2px solid #c8242f;
 }
-.tabs .active .tab-link{
-  color: #C8242F;
+.tabs .active .tab-link {
+  color: #c8242f;
   font-weight: 600;
 }
 
-.col-box p{
-  color: #3E3E3E;
+.col-box p {
+  color: #3e3e3e;
   font-size: 15px;
   width: 1119px;
+}
+
+/* Responsive Designs*/
+/* @media screen and (min-width:1024px) and (max-width:1520px){
+.main-container{
+
+}
+} */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  /* Login-Page */
+  .main-container {
+    min-width: 1023px;
+    /* min-height: 720px; */
+    width: 100%;
+  }
+  .flex-container {
+    /* width: 100%; */
+    min-width: 1023px;
+    /* min-height: 720px; */
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  /* Login-Page */
+  .main-container {
+    height: 100%;
+  }
+  .flex-container {
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+    margin-bottom: 100px;
+  }
+  .flex-container .logo-img{
+    transform: scale(2,2) translateY(180px);
+  }
+  .flex-container .content{
+    transform: scale(2,2) translateY(420px);
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  /* Login-Page */
+  .main-container {
+    min-width: 480px;
+    height: 100%;
+  }
+  .flex-container {
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    margin-bottom: 100px;
+  }
+  .flex-container .logo-img{
+    transform: scale(0.7,0.7) translateY(260px);
+  }
+  .flex-container .content{
+    transform: scale(0.7,0.7) translateY(-170px);
+  }
+}
+@media screen and (max-width: 320px){
+  /* Login-Page */
+  .main-container {
+    min-width: 320px;
+    height: 100%;
+  }
+  .flex-container {
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    margin-bottom: 100px;
+  }
+  .flex-container .logo-img{
+    transform: scale(0.5,0.5) translateY(260px);
+  }
+  .flex-container .content{
+    transform: scale(0.5,0.5) translateY(-552px);
+  }
 }
