--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,12 @@
 .main-container {
   background: #fafafa 0% 0% no-repeat padding-box;
   height: 100vh;
-  min-height: 720px;
   display: flex;
-  min-width: 1560px;
+  width: 100%;
+  height: 100%;
 }
 
 .flex-container {
-  /* background-color: #FAFAFA; */
   display: flex;
   justify-content: center;
   height: 100%;
@@ -147,9 +146,12 @@ Header {
 }
 
 Header .logo {
-  margin-left: 25px;
+  margin-left: 5px;
   width: 142px;
   height: 30px;
+}
+Header .menu-bar{
+  margin-left: 10px;
 }
 
 Header #check {
@@ -835,6 +837,16 @@ input[type="checkbox"] {
 /* Responsive Designs*/
 @media screen and (min-width: 1200px) and (max-width: 1455px) {
 
+  /* Login-page */
+  .logo-img{
+    width: 40%;
+    height: 40%;
+    margin: 65px 140px;
+  }
+  .content{
+    height: 50%;
+    width: 50%;
+  }
   /* Dashboard-Header */
   .main .side-bar {
     display: none;
@@ -866,11 +878,11 @@ input[type="checkbox"] {
   }
 
   Header .flex-right div{
-    transform: scale(1.5,1.5);
+    transform: scale(1.2,1.2);
     transform-origin: top left;
   }
   Header .flex-right .right-panel{
-    transform: scale(1.1,1.1) translateX(-50px);
+    transform: scale(1,1) translateX(-9px);
     transform-origin: top left;
   }
   /* Dshboard-main */
@@ -909,13 +921,25 @@ input[type="checkbox"] {
   }
 }
 @media screen and (min-width: 1024px) and (max-width: 1199px){
+  /* Login-page */
+  .logo-img{
+    width: 40%;
+    height: 40%;
+    margin-right: 110px;
+  }
+  .content{
+    height: 60%;
+    width: 60%;
+    transform: scale(0.8,0.8) translateY(-60px);
+    transform-origin: left;
+  }
  /* Dashboard-Header */
  .main .side-bar {
   display: none;
 }
 
 Header:has(#check:checked) ~ .main .side-bar {
-  transform: scale(1.5,1.5);
+  transform: scale(1.2,1.2);
   transform-origin: top left;
   background-color: #ffffff;
   height: 100%;
@@ -931,16 +955,16 @@ Header:has(#check:checked) ~ .main {
 Header .flex-left {
   width: 400px;
   justify-content: center;
-  transform: scale(1.4,1.4);
+  transform: scale(1.2,1.2);
   transform-origin: left;
 }
 
 Header .flex-right div{
-  transform: scale(1.4,1.4);
+  transform: scale(1.2,1.2);
   transform-origin: top left;
 }
 Header .flex-right .right-panel{
-  transform: scale(1.1,1.1) translateX(-50px);
+  transform: scale(1.1,1.1) translateX(-28px);
   transform-origin: top left;
 }
 /* Dashboard-main */
@@ -991,6 +1015,18 @@ Header .flex-right .right-panel{
 }
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+   /* Login-page */
+   .logo-img{
+    width: 40%;
+    height: 40%;
+    margin-right:40px;
+  }
+  .content{
+    height: 50%;
+    width: 50%;
+    transform: scale(0.8,0.8) translateY(-60px);
+    transform-origin: left;
+  }
   /* Login-Page */
   .main-container {
     min-width: 1023px;
@@ -1007,7 +1043,7 @@ Header .flex-right .right-panel{
   }
  
   Header:has(#check:checked) ~ .main .side-bar {
-    transform: scale(1.5,1.5);
+    transform: scale(1,1);
     transform-origin: top left;
     background-color: #ffffff;
     height: 100%;
@@ -1023,7 +1059,7 @@ Header .flex-right .right-panel{
   Header .flex-left {
     width: 400px;
     justify-content: center;
-    transform: scale(1.5,1.5);
+    transform: scale(1.2,1.2);
     transform-origin: left;
   }
 
@@ -1032,11 +1068,11 @@ Header .flex-right .right-panel{
   }
 
   Header .flex-right div{
-    transform: scale(1.5,1.5);
+    transform: scale(1.2,1.2);
     transform-origin: top left;
   }
   Header .flex-right .right-panel{
-    transform: scale(1.1,1.1) translateX(-50px);
+    transform: scale(1,1) translateX(-7px);
     transform-origin: top left;
   }
 
@@ -1109,20 +1145,22 @@ Header .flex-right .right-panel{
 
 @media screen and (min-width: 641px) and (max-width: 767px) {
   /* Login-Page */
-  .main-container {
-    height: 100%;
-  }
-  .flex-container {
+  .flex-container{
     flex-direction: column;
-    height: 100%;
+    width: 100%;
     align-items: center;
-    margin-bottom: 100px;
   }
-  .flex-container .logo-img {
-    transform: scale(2, 2) translateY(180px);
+  .logo-img{
+    width: 50%;
+    height: 50%;
+    margin: 0px;
+    margin-top: 20px;
   }
-  .flex-container .content {
-    transform: scale(2, 2) translateY(420px);
+  .content{
+    height: 50%;
+    width: 50%;
+    transform: scale(0.6,0.6) translateY(-280px);
+    transform-origin: left;
   }
 
   
@@ -1131,7 +1169,7 @@ Header .flex-right .right-panel{
     display: none;
   }
   Header:has(#check:checked) ~ .main .side-bar {
-    transform: scale(1.5,1.5);
+    transform: scale(0.9,0.9);
     transform-origin: top left;
     background-color: #ffffff;
     height: 100%;
@@ -1145,18 +1183,21 @@ Header .flex-right .right-panel{
     position: relative;
   }
   Header{
-    height: 100px;
+    height: 60px;
   }
   Header .flex-left {
     z-index: 1;
     background-color: #FFFFFF;
     justify-content: center;
     width: 484px;
-    transform: scale(1.5,1.5);
+    transform: scale(0.9,0.9);
     transform-origin: left top;
     margin-left: 25px;
   }
   Header:has(#check:checked)  .flex-right .search{
+    display: none;
+  }
+  Header:has(#check:checked)  .flex-right .search-txt{
     display: none;
   }
   Header:has(#check:not(:checked)) .flex-left{
@@ -1166,14 +1207,14 @@ Header .flex-right .right-panel{
     display: none;
   }
   Header .flex-right div{
-    transform: scale(1.5,1.5);
+    transform: scale(0.9,0.9);
     z-index: 0;
   }
   Header .flex-right{
-    justify-content: flex-end;
+    justify-content: space-between;
   }
   Header .flex-right .right-panel{
-    transform: scale(1.2,1.2) translateX(-45px);
+    transform: scale(0.9,0.9) translateX(15px);
     transform-origin: left;
   }
   Header .flex-right #notification{
@@ -1252,15 +1293,34 @@ Header .flex-right .right-panel{
 .main-form .col-box .control .info-control ~ span{
   padding-left: 0px;
 }
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 640px){
+   /* Login-Page */
+   .flex-container{
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+  }
+  .logo-img{
+    width: 50%;
+    height: 50%;
+    margin: 0px;
+    margin-top: 20px;
+  }
+  .content{
+    height: 50%;
+    width: 50%;
+    transform: scale(0.6,0.6) translateY(-280px);
+    transform-origin: left;
+  }
   /* Dashboard-sidebar */
   .main .side-bar {
     display: none;
   }
   Header:has(#check:checked) ~ .main .side-bar {
-    transform: scale(2,2);
+    transform: scale(1,1);
     transform-origin: top left;
     background-color: #ffffff;
     height: 100%;
@@ -1274,16 +1334,16 @@ Header .flex-right .right-panel{
     position: relative;
   }
   Header{
-    height: 100px;
+    height: 50px;
   }
   Header .flex-left {
     z-index: 1;
     background-color: #FFFFFF;
     justify-content: center;
-    width: 484px;
-    transform: scale(1.5,1.5);
+    width: 400px;
+    transform: scale(0.8,0.8);
     transform-origin: left top;
-    margin-left: 65px;
+    margin-left: 10px;
   }
   Header .flex-right .search{
     display: none;
@@ -1291,17 +1351,11 @@ Header .flex-right .right-panel{
   Header .flex-right .search-txt{
     display: none;
   }
-  Header:has(#check:not(:checked)) .flex-left{
-    width: 60px;
-  }
-  Header:has(#check:not(:checked)) .flex-left .logo{
-    display: none;
-  }
   Header .flex-right{
     justify-content: flex-end;
   }
   Header .flex-right .right-panel{
-    transform: scale(1.2,1.2) translateX(-45px);
+    transform: scale(0.9,0.9) translateX(19px);
     transform-origin: left;
   }
   Header:has(#check:checked) .flex-right .right-panel{
@@ -1372,24 +1426,72 @@ Header .flex-right .right-panel{
     width: 95%;
     align-self: center;
   }
+
+    /* Inner-Page */
+.main-dashboard .main-form{
+  margin-left: 0px;
+  margin-top: 10px;
+  width: 95%;
+  align-self: center;
+}
+.main-dashboard .main-form .col-box{
+  margin-bottom: 35px;
+}
+.col-box p{
+  width: 95%;
+}
+.main-form .col-box .control .validate-control ~ span{
+  padding-left: 0px;
+}
+.main-form .col-box .control .info-control ~ span{
+  padding-left: 0px;
+}
+.main-form .col-box .head-text{
+  font-size: 18px;
+  margin-bottom: 10px !important;
+}
+.main-form .col-box .inner-head-text{
+  font-size: 15px;
+  margin-top: 25px !important; 
+  margin-bottom: 15px !important;
+}
+.snackbar{
+  height: 35px;
+  line-height: 30px;
+  font-size: 13px;
+}
+.snackbar img{
+  height: 20px;
+  width: 20px;
+}
+.btn-box .primary{
+  width: 100px;
+  height: 35px;
+  font-size: 15px;
+}
+.btn-box .secondary{
+  width: 115px;
+  height: 35px;
+  font-size: 15px;
+}
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
   /* Login-Page */
-  .main-container {
-    min-width: 480px;
-    height: 100%;
-  }
-  .flex-container {
+  .flex-container{
     flex-direction: column;
-    height: 100vh;
+    width: 100%;
     align-items: center;
-    margin-bottom: 100px;
   }
-  .flex-container .logo-img {
-    transform: scale(0.7, 0.7) translateY(260px);
+  .logo-img{
+    width: 50%;
+    height: 50%;
+    margin: 0px;
+    margin-top: 20px;
   }
-  .flex-container .content {
-    transform: scale(0.7, 0.7) translateY(-170px);
+  .content{
+    transform: scale(0.5,0.5) translateY(-260px);
+    margin-top: 20px;
+    align-self: center;
   }
 
   /* Dashboard-page */
@@ -1397,7 +1499,7 @@ Header .flex-right .right-panel{
     display: none;
   }
   Header:has(#check:checked) ~ .main .side-bar {
-    transform: scale(1.5,1.5);
+    transform: scale(1.1,1.1);
     transform-origin: top left;
     background-color: #ffffff;
     height: 100%;
@@ -1412,7 +1514,7 @@ Header .flex-right .right-panel{
   }
   Header .flex-left {
     justify-content: center;
-    transform: scale(1.5,1.5);
+    transform: scale(1.1,1.1);
     transform-origin: left;
     margin-left: 5px;
   }
@@ -1428,6 +1530,9 @@ Header .flex-right .right-panel{
   }
   .right-panel :not(.profile){
     display: none;
+  }
+  .profile{
+    margin-right: 20px;
   }
 
   /* Dashboard-Main */
@@ -1527,4 +1632,51 @@ Header .flex-right .right-panel{
   .main-dashboard .invoices .custom-table .data{
     font-size: 12px;
   }
+  /* Inner-Page */
+.main-dashboard .main-form{
+  margin-left: 0px;
+  margin-top: 10px;
+  width: 95%;
+  align-self: center;
+}
+.main-dashboard .main-form .col-box{
+  margin-bottom: 35px;
+}
+.col-box p{
+  width: 95%;
+}
+.main-form .col-box .control .validate-control ~ span{
+  padding-left: 0px;
+}
+.main-form .col-box .control .info-control ~ span{
+  padding-left: 0px;
+}
+.main-form .col-box .head-text{
+  font-size: 18px;
+  margin-bottom: 10px !important;
+}
+.main-form .col-box .inner-head-text{
+  font-size: 15px;
+  margin-top: 25px !important; 
+  margin-bottom: 15px !important;
+}
+.snackbar{
+  height: 35px;
+  line-height: 30px;
+  font-size: 13px;
+}
+.snackbar img{
+  height: 20px;
+  width: 20px;
+}
+.btn-box .primary{
+  width: 100px;
+  height: 35px;
+  font-size: 15px;
+}
+.btn-box .secondary{
+  width: 115px;
+  height: 35px;
+  font-size: 15px;
+}
 }
